tests/baselines/reference/primitiveTypeAsClassName.errors.txt
primitiveTypeAsClassName.ts(1,7): error TS2414: Class name cannot be 'any'.


==== primitiveTypeAsClassName.ts (1 errors) ====
    class any {}
          ~~~
!!! error TS2414: Class name cannot be 'any'.